# ml

./: .gitignore  activation_functions.py  builder.py  config_parser.py  experiment.py  exprconfig.toml  layers.py  loss_functions.py  main.py  model.py  optimizers.py  preprocessor.py  preprocessor_methods.py  pyproject.toml  trainer.py  weights.npz
artifacts/: architecture.json  weights.npz
