[project]
name = "ml"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["numpy>=2.3.2", "scikit-learn>=1.7.1", "matplotlib>=3.10.5", "mlflow>=3.1.4", "seaborn>=0.13.2"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "unlicense"}


[tool.pdm]
distribution = false
